--- a/markitstockEx/.project
+++ b/markitstockEx/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>markitstockEx</name>
+	<name>markitstockEx-httpbasic</name>
 	<comment></comment>
 	<projects>
 	</projects>
